--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "bmwmd",
+  "name": "science",
   "version": "2.0.0",
   "description": "",
   "main": "ibrahim.js",
   "scripts": {
     "test": "node ibrahim.js",
     "s": "node ibrahim.js",
-    "bmwmd": "pm2 start ibrahim.js --attach",
-    "bmwmd": "pm2 start ibrahim.js --attach",
+    "science": "pm2 start ibrahim.js --attach",
+    "science": "pm2 start ibrahim.js --attach",
     "c": "tsc"
   },
   "keywords": [
     "bot",
     "Baileys",
-    "Bmw-md",
+    "science",
     "whatsapp",
     "whatsapp-bot",
-    "bmw-md-boy"
+    "omlugha"
   ],
-  "author": "ibraahadam",
+  "author": "omlugha",
 "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
