--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description":"Best whatsapp bot developed by Ibrahim adams",
   "keywords":["bot","node","baileys","whatsapp"],
   "logo":"https://telegra.ph/file/0c225f7da5616cdcbec80.jpg",
-  "repository":"https://github.com/ibraahadam/BMW-MD",
+  "repository":"https://github.com/omlugha/science",
   "succes_url":"/",
   "stack":"container",
   "env":{
