--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name":"BMW-MD",
+  "name":"science",
   "description":"Best whatsapp bot developed by Ibrahim adams",
   "keywords":["bot","node","baileys","whatsapp"],
   "logo":"https://telegra.ph/file/0c225f7da5616cdcbec80.jpg",
