--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "scripts": {
     "test": "node ibrahim.js",
     "s": "node ibrahim.js",
-    "science": "pm2 start ibrahim.js --attach",
+    "start": "pm2 start ibrahim.js --attach",
     "science": "pm2 start ibrahim.js --attach",
     "c": "tsc"
+      },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omlugha/science.git"
+  },
   },
   "keywords": [
     "bot",
@@ -56,6 +61,7 @@
     "node-fetch": "^3.2.6",
     "node-id3": "^0.2.6",
     "pg": "^8.11.2",
+    "pm2": "^5.3.0",
     "pino": "^8.15.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
