--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "science",
-  "version": "2.0.0",
-  "description": "",
+  "name": "X-BOT-MD",
+  "version": "3.2.0",
+  "description": "WhatsApp Helper Bot",
   "main": "ibrahim.js",
   "scripts": {
-    "test": "node ibrahim.js",
-    "s": "node ibrahim.js",
-    "start": "pm2 start ibrahim.js --attach",
-    "science": "pm2 start ibrahim.js --attach",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "pm2 start . --attach --name ibraah",
+    "stop": "pm2 stop . --attach --name ibraah"
     "c": "tsc"
       },
   "repository": {
