--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "X-BOT-MD",
+  "name": "science",
   "version": "3.2.0",
   "description": "WhatsApp Helper Bot",
   "main": "ibrahim.js",
