--- a/package.json
+++ b/package.json
@@ -1,78 +1,89 @@
 {
+{
   "name": "science",
-  "version": "3.2.0",
-  "description": "WhatsApp Helper Bot",
-  "main": "ibrahim.js",
+  "version": "5.0.0",
+  "description": "science",
+  "main": ".ibrahim.js",
+  "type": "module",
+  "engines" : { "node": "v20.15.1", "npm": "10.8.2" },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start . --attach --name ibraah",
-    "stop": "pm2 stop . --attach --name ibraah"
-    "c": "tsc"
-      },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/omlugha/science.git"
+    "start": "pm2 start ibrahim.js --deep-monitoring --attach --name Ibrahim",
+    "stop": "pm2 stop ibrahim",
+    "restart": "pm2 restart ibrahim"
   },
-  },
-  "keywords": [
-    "bot",
-    "Baileys",
-    "science",
-    "whatsapp",
-    "whatsapp-bot",
-    "omlugha"
-  ],
+  "keywords": ["science", "whatsapp-bot", "gifted-tech"],
   "author": "omlugha",
-"license": "ISC",
+  "license": "GNU",
   "dependencies": {
-    "@adiwajshing/keyed-db": "^0.2.4",
+    "@distube/ytdl-core": "^4.13.5",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
-    "@types/node": "^18.0.6",
-                "@whiskeysockets/baileys": "github:Luffy2ndAccount/Baileys",
-    "@xaviabot/fb-downloader": "^1.0.14",
+    "@whiskeysockets/baileys": "git+https://github.com/ibrahimaitech/BMW-Baileys.git",
+    "acrcloud": "^1.4.0",
+    "api-dylux": "^1.8.3",
     "aptoide-scraper": "^1.0.1",
-    "axios": "^1.4.0",
-    "cache-manager": "latest",
-    "canvacord": "^5.4.8",
-    "chal": "^0.0.1-security.0",
+    "awesome-phonenumber": "^6.8.0",
+    "axios": "^1.6.8",
+    "betabotz-tools": "^0.0.7",
     "chalk": "^5.3.0",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.3.1",
+    "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
-    "file-type": "16.5.3",
-    "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
-    "fs-extra": "^11.1.1",
-    "g-i-s": "^2.1.7",
-    "gist": "^0.2.0",
-     "genius-lyrics": "^4.4.3", 
+    "file-type": "^19.0.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^10.1.0",
     "google-it": "^1.6.4",
-    "google-tts-api": "latest",
-    "heroku-client": "^3.1.0",
+    "heroku-client": "3.1.0",
     "human-readable": "^0.2.1",
-    "javascript-obfuscator": "^4.1.0",
-                     "jimp": "^0.16.13", 
     "latest": "^0.2.0",
-    "link-preview-js": "^3.0.4",
-    "moment-timezone": "^0.5.43",
-    "mumaker": "^2.0.0",
+    "instagram-user": "^2.0.1",
+    "javascript-obfuscator": "^4.1.0",
+    "jimp": "^0.16.13",
+    "jpeg-js": "^0.4.4",
+    "jsqr": "^1.4.0",
+    "libphonenumber": "^0.0.10",
+    "mfiredlcore-vihangayt": "^1.0.0",
+    "moment-timezone": "^0.5.45",
+    "nayan-media-downloader": "^2.4.3",
+    "nayan-server": "^2.3.8",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
-    "node-fetch": "^3.2.6",
-    "node-id3": "^0.2.6",
-    "pg": "^8.11.2",
-    "pm2": "^5.3.0",
-    "pino": "^8.15.0",
-    "qrcode-terminal": "^0.12.0",
+    "node-fetch": "^3.3.2",
+    "node-os-utils": "^1.3.7",
+    "node-webpmux": "^3.2.0",
+    "os": "^0.1.2",
+    "pastebin-js": "^1.0.6",
+    "performance-now": "^2.1.0",
+    "pino": "^8.20.0",
+    "pm2": "^5.2.0",
+    "proto": "^1.0.19",
+    "qrcode": "latest",
     "readline": "^1.3.0",
-    "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6",
-    "translatte": "^3.0.1",
-    "types": "^0.1.1",
-    "typescript": "^5.1.6",
-    "wa-sticker-formatter": "^4.4.4",
-    "youtube-yts": "^2.0.0",
-    "youtubedl-core": "^4.11.7",
-    "yt-search": "^2.10.4",
-    "ytdl-core": "github:soya-daizu/ytdl-core#sig-patch"
+    "remove.bg": "^1.3.0",
+    "simple-git": "^3.15.1",
+    "tesseract.js": "^5.1.0",
+    "translate-google-api": "^1.0.4",
+    "uuid": "^9.0.1",
+    "yt-search": "^2.11.0",
+    "ytdl-core": "github:ibrahimaitech/ytdl-core#main"
+   },
+     "directories": {
+      "lib": "bdd",
+      "plugins": "bmw/cmds"
+   },
+   "devDependencies": {
+      "pino": "^7.0.5"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/omlugha/science.git"
+   },
+   "bugs": {
+      "url": "https://github.com/omlugha/science/issues"
+   },
+   "homepage": "https://github.com/omlugha/science#readme"
   }
-}
