--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "translate-google-api": "^1.0.4",
     "uuid": "^9.0.1",
     "yt-search": "^2.11.0",
-    "ytdl-core": "github:ibrahimaitech/ytdl-core#main"
+    "ytdl-core": "github:mouricedevs/ytdl-core#main"
    },
      "directories": {
       "lib": "bdd",
