--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "proto": "^1.0.19",
     "qrcode": "latest",
     "readline": "^1.3.0",
+    "sequelize": "^6.32.1",
     "remove.bg": "^1.3.0",
     "simple-git": "^3.15.1",
     "tesseract.js": "^5.1.0",
