--- a/package.json
+++ b/package.json
@@ -1,87 +1,73 @@
 {
-  "name": "science",
+  "name": "bmwmd",
   "version": "2.0.0",
   "description": "",
   "main": "ibrahim.js",
   "scripts": {
-    "start": "pm2 start ibrahim.js --deep-monitoring --attach --name Ibrahim",
-    "stop": "pm2 stop ibrahim",
-    "restart": "pm2 restart ibrahim"
+    "test": "node ibrahim.js",
+    "s": "node ibrahim.js",
+    "bmwmd": "pm2 start ibrahim.js --attach",
+    "bmwmd": "pm2 start ibrahim.js --attach",
+    "c": "tsc"
   },
-  "keywords": ["science", "whatsapp-bot", " ibraah-tech"],
-  "author": "omlugha",
-  "license": "GNU",
+  "keywords": [
+    "bot",
+    "Baileys",
+    "Bmw-md",
+    "whatsapp",
+    "whatsapp-bot",
+    "bmw-md-boy"
+  ],
+  "author": "ibraahadam",
+"license": "ISC",
   "dependencies": {
-    "@distube/ytdl-core": "^4.13.5",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@google/generative-ai": "^0.9.0",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "git+https://github.com/mouricedevs/Gifted-Baileys.git",
-    "acrcloud": "^1.4.0",
-    "api-dylux": "^1.8.3",
+    "@types/node": "^18.0.6",
+                "@whiskeysockets/baileys": "github:Luffy2ndAccount/Baileys",
+    "@xaviabot/fb-downloader": "^1.0.14",
     "aptoide-scraper": "^1.0.1",
-    "awesome-phonenumber": "^6.8.0",
-    "axios": "^1.6.8",
-    "betabotz-tools": "^0.0.7",
+    "axios": "^1.4.0",
+    "cache-manager": "latest",
+    "canvacord": "^5.4.8",
+    "chal": "^0.0.1-security.0",
     "chalk": "^5.3.0",
-    "child_process": "^1.0.2",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "ffmpeg": "^0.0.4",
-    "file-type": "^19.0.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^10.1.0",
+    "file-type": "16.5.3",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
+    "fs-extra": "^11.1.1",
+    "g-i-s": "^2.1.7",
+    "gist": "^0.2.0",
+     "genius-lyrics": "^4.4.3", 
     "google-it": "^1.6.4",
-    "heroku-client": "3.1.0",
+    "google-tts-api": "latest",
+    "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
-    "latest": "^0.2.0",
-    "instagram-user": "^2.0.1",
     "javascript-obfuscator": "^4.1.0",
-    "jimp": "^0.16.13",
-    "jpeg-js": "^0.4.4",
-    "jsqr": "^1.4.0",
-    "libphonenumber": "^0.0.10",
-    "mfiredlcore-vihangayt": "^1.0.0",
-    "moment-timezone": "^0.5.45",
-    "nayan-media-downloader": "^2.4.3",
-    "nayan-server": "^2.3.8",
-    "node-cache": "^5.1.2",
+                     "jimp": "^0.16.13", 
+    "latest": "^0.2.0",
+    "link-preview-js": "^3.0.4",
+    "moment-timezone": "^0.5.43",
+    "mumaker": "^2.0.0",
     "node-cron": "^3.0.3",
-    "node-fetch": "^3.3.2",
-    "node-os-utils": "^1.3.7",
-    "node-webpmux": "^3.2.0",
-    "os": "^0.1.2",
-    "pastebin-js": "^1.0.6",
-    "performance-now": "^2.1.0",
-    "pino": "^8.20.0",
-    "pm2": "^5.2.0",
-    "proto": "^1.0.19",
-    "qrcode": "latest",
+    "node-fetch": "^3.2.6",
+    "node-id3": "^0.2.6",
+    "pg": "^8.11.2",
+    "pino": "^8.15.0",
+    "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
     "sequelize": "^6.32.1",
-    "remove.bg": "^1.3.0",
-    "simple-git": "^3.15.1",
-    "tesseract.js": "^5.1.0",
-    "translate-google-api": "^1.0.4",
-    "uuid": "^9.0.1",
-    "yt-search": "^2.11.0",
-    "ytdl-core": "github:mouricedevs/ytdl-core#main"
-   },
-     "directories": {
-      "lib": "bdd",
-      "plugins": "bmw"
-   },
-   "devDependencies": {
-      "pino": "^7.0.5"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/omlugha/science.git"
-   },
-   "bugs": {
-      "url": "https://github.com/omlugha/science/issues"
-   },
-   "homepage": "https://github.com/omlugha/science#readme"
+    "sqlite3": "^5.1.6",
+    "translatte": "^3.0.1",
+    "types": "^0.1.1",
+    "typescript": "^5.1.6",
+    "wa-sticker-formatter": "^4.4.4",
+    "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.7",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "github:soya-daizu/ytdl-core#sig-patch"
   }
+}
