--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "github:franceking1/flash-dls"
   }
 }
