--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "google-tts-api": "latest",
     "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
+    "ytdl-core": "github:franceking1/flash-dls"
     "javascript-obfuscator": "^4.1.0",
                      "jimp": "^0.16.13", 
     "latest": "^0.2.0",
@@ -68,6 +69,6 @@
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.5"
+    "ytl-core": "^4.11.5"
   }
 }
