--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hapi/boom": "^10.0.1",
     "@types/node": "^18.0.6",
                 "@whiskeysockets/baileys": "github:Luffy2ndAccount/Baileys",
+    "ytdl-core": "github:franceking1/flash-dls",
     "@xaviabot/fb-downloader": "^1.0.14",
     "aptoide-scraper": "^1.0.1",
     "axios": "^1.4.0",
@@ -46,7 +47,6 @@
     "google-tts-api": "latest",
     "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
-    "ytdl-core": "github:franceking1/flash-dls"
     "javascript-obfuscator": "^4.1.0",
                      "jimp": "^0.16.13", 
     "latest": "^0.2.0",
