--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "typescript": "^5.1.6",
     "wa-sticker-formatter": "^4.4.4",
     "youtube-yts": "^2.0.0",
-    "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
-    "ytl-core": "^4.11.5"
+    "youtubedl-core": "^4.11.7"
   }
 }
