--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "BMW-MD",
-  "version": "10.8.1",
-  "description": "World best fast new whatsapp bot",
+  "name": "bmwmd",
+  "version": "2.0.0",
+  "description": "",
   "main": "ibrahim.js",
-  "type": "module",
   "scripts": {
-    "start": "pm2 start ibrahim.js --deep-monitoring --attach --name bmwmd",
-    "stop": "pm2 stop bmwmd",
-    "restart": "pm2 restart ",
+    "test": "node ibrahim.js",
+    "s": "node ibrahim.js",
+    "bmwmd": "pm2 start ibrahim.js --attach",
+    "bmwmd": "pm2 start ibrahim.js --attach",
     "c": "tsc"
   },
   "keywords": [
@@ -58,7 +58,6 @@
     "node-id3": "^0.2.6",
     "pg": "^8.11.2",
     "pino": "^8.15.0",
-    "pm2": "^5.4.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
     "sequelize": "^6.32.1",
@@ -71,4 +70,4 @@
     "yt-search": "^2.10.4",
     "youtubedl-core": "^4.11.7"
   }
-}
+    }
